--- a/Technicality.online/Views/Home/About.cshtml
+++ b/Technicality.online/Views/Home/About.cshtml
@@ -3,14 +3,10 @@
     ViewData["Title"] = "About";
 }
 
-
-<div class="text-center">
-    <img src="~/images/TechnicalityLogo.jpg" class="img-fluid" alt="Technicality" />
-</div>
 <div class="row align-items-center">
     <div class="col-10">
         <blockquote class="blockquote">
-            <p>Technicality is boutique technology consulting firm located in the Birmingham, AL metro area.</p>
+            <p>Technicality is a boutique technology consulting firm located in the Birmingham, AL metro area.</p>
         </blockquote>
     </div>
     <div class="col-2">
@@ -18,11 +14,50 @@
     </div>
 </div>
 <hr />
-<div class="text-center">
-    <figure class="figure">
-        <img class="img-fluid" src="~/images/shutterstock_101403709.jpg" />
-        <figcaption class="figure-caption">View of downtown from <a href="https://railroadpark.org" target="_blank">Railroad Park</a>, a catalyst for Birmingham's rejuvenation</figcaption>
-    </figure>
+<div class="row">
+    <div class="col-6">
+        <div class="text-center">
+            <figure class="figure">
+                <img class="img-fluid" src="~/images/shutterstock_101403709.jpg" />
+                <figcaption class="figure-caption">View of downtown from <a href="https://railroadpark.org" target="_blank">Railroad Park</a>, a catalyst for Birmingham's rejuvenation</figcaption>
+            </figure>
+        </div>
+    </div>
+    <div class="col-6">
+        <!-- Begin Mailchimp Signup Form -->
+        <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
+        <style type="text/css">
+                 #mc_embed_signup {
+                     background: #fff;
+                     clear: left;
+                     font: 14px Helvetica,Arial,sans-serif;
+                 }
+                 /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+            We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
+        </style>
+        <div id="mc_embed_signup">
+            <form action="https://online.us1.list-manage.com/subscribe/post?u=dcd6b98f6b5d8cde3db05ed88&amp;id=c4940b75a1" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+                <div id="mc_embed_signup_scroll">
+                    <h2>Subscribe to our email newsletter</h2>
+                    <div class="indicates-required"><span class="asterisk">*</span> indicates required</div>
+                    <div class="mc-field-group">
+                        <label for="mce-EMAIL">
+                            Email Address  <span class="asterisk">*</span>
+                        </label>
+                        <input type="email" value="" name="EMAIL" class="required email" id="mce-EMAIL">
+                    </div>
+                    <div id="mce-responses" class="clear">
+                        <div class="response" id="mce-error-response" style="display:none"></div>
+                        <div class="response" id="mce-success-response" style="display:none"></div>
+                    </div>    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+                    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_dcd6b98f6b5d8cde3db05ed88_c4940b75a1" tabindex="-1" value=""></div>
+                    <div class="clear"><input type="submit" value="Subscribe" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+                </div>
+            </form>
+        </div>
+
+        <!--End mc_embed_signup-->
+    </div>
 </div>
 <hr />
 <h3>Leadership</h3>
