Medical billing changes 1

--- a/Technicality.online/Views/Home/Azure.cshtml
+++ b/Technicality.online/Views/Home/Azure.cshtml
@@ -13,7 +13,13 @@
     <li>Cloud storage</li>
 </ul>
 <p>You may already be using Azure without realizing it. If you are using Microsoft 365 (formerly Office 365), the user account you use for that is actually an Azure Active Directory account.</p>
-<p>Azure is very powerful, but it can be confusing when you are starting out. Technicality can help you navigate this process.</p>
+    <h3>What exactly is "The Cloud"?</h3>
+    <p>
+        For many, the cloud is still a bit of a mystery. Microsoft has put together a <a href="https://news.microsoft.com/stories/microsoft-datacenter-tour/" target="_blank">virtual datacenter experience</a> to help explain it.
+        <br />
+        <a href="https://news.microsoft.com/innovation-stories/microsofts-virtual-datacenter-grounds-the-cloud-in-reality/" target="_blank">Read more about it here.</a>
+    </p>
+
 <hr />
 <p>Here is a short video from Microsoft outlining <i>4 Reasons SMBs Should Move to Microsoft Azure</i> </p>
 <video width="500" height="281" controls poster="https://technicalitystorage.blob.core.windows.net/public/4 Reasons to move to Azure image.jpg">
