--- a/Technicality.online/Views/Home/Index.cshtml
+++ b/Technicality.online/Views/Home/Index.cshtml
@@ -7,18 +7,16 @@
 
 <div class="row">
     <div class="col">
-        <h1>Helping clients take advantage of cloud technology</h1>
-        <p>Cloud technology is a game changer. It offers cost savings, reliability, and flexibility and allows small and medium businesses to compete with larger companies in ways that were previously unimaginable.   </p>
-        <p>Technicality is a boutique IT services firm. We can help you manage your existing infrastructure and get you started with your cloud migration.</p>
+        <h1>We specialize in IT services for medical billing companies</h1>
+        <p>We understand the unique technical challenges that medical billing companies deal with.</p>
+        <ul>
+            <li>HIPAA has ramifications for almost everything you do.</li>
+            <li>You frequently need more secure connections than similarly sized companies in other industries.</li>
+            <li>Your employee's computers need to run PM systems for multiple client practices.</li>
+        </ul>
+        <p>We can help with setup, helpdesk support, secure remote connectivity, Internet hosting, and cloud services like Microsoft 365 and Azure. We've also developed a web application called <a asp-controller="Projects" asp-action="RCMChannels">RCM Channels</a> to help billers track down loose ends on getting claims paid.</p>
     </div>
     <div class="col">
-        <img class="img-fluid" src="~/images/shutterstock_622863563.jpg" />
+        <img class="img-fluid" src="~/images/shutterstock_547201843.jpg" />
     </div>
-</div>
-<div class="row">
-    <h3>What exactly is "The Cloud"?</h3>
-    <p>For many, the cloud is still a bit of a mystery. Microsoft has put together a <a href="https://news.microsoft.com/stories/microsoft-datacenter-tour/" target="_blank">virtual datacenter experience</a> to help explain it.
-        <br />
-        <a href="https://news.microsoft.com/innovation-stories/microsofts-virtual-datacenter-grounds-the-cloud-in-reality/" target="_blank">Read more about it here.</a>
-    </p>
 </div>
