--- a/Technicality.online/Views/Home/About.cshtml
+++ b/Technicality.online/Views/Home/About.cshtml
@@ -64,7 +64,7 @@
 <div class="row">
     <div class="col-10">
         <div class="justify-content-center">
-            <div>Technicality is led by <a href="https://www.linkedin.com/in/jefftrotman10/" target="_blank">Jeff Trotman</a>. Jeff has been in the technology business in Birmingham for over 25 years.</div>
+            <div>Technicality is led by <a href="https://www.linkedin.com/in/jefftrotman10/" target="_blank">Jeff Trotman</a>. Jeff has been in the technology business in Birmingham for over 25 years and has spent the last several years focused on healthcare technology working with medical practices, imaging centers, hospitals, and medical billing firms.</div>
         </div>
     </div>
     <div class="col-2">
