--- a/Technicality.online/Views/Home/SoftwareDevelopment.cshtml
+++ b/Technicality.online/Views/Home/SoftwareDevelopment.cshtml
@@ -22,7 +22,8 @@
         </ul>
     </div>
 </div>
-<h2>Example Projects</h2>
+
+@*<h2>Example Projects</h2>
 <div class="row">
     <div class="col">
         Many of the projects we work on for clients are internal application that aren't targeted for the public. Here are some examples of projects that we own and operate:
@@ -34,4 +35,4 @@
             <li>@Html.ActionLink("Pitch Counter", "PitchCounter", "Projects") - Android app to help youth baseball coaches track pitch counts</li>
         </ul>
     </div>
-</div>
+</div>*@
