--- a/Technicality.online/Views/Home/About.cshtml
+++ b/Technicality.online/Views/Home/About.cshtml
@@ -4,13 +4,16 @@
 }
 
 <div class="row align-items-center">
-    <div class="col-10">
+    <div class="col-8">
         <blockquote class="blockquote">
-            <p>Technicality is a boutique technology consulting firm located in the Birmingham, AL metro area.</p>
+            <p>Technicality is a technology consulting firm located in the Birmingham, AL area.</p>
         </blockquote>
     </div>
     <div class="col-2">
-        <img class="img-fluid" src="~/images/mspartnerlogo.png" />
+        <a href="https://linkedin.com/company/technicality"><img class="img-fluid" src="~/images/LI-Logo.png" /></a>
+    </div>
+    <div class="col-2">
+        <a href="https://www.microsoft.com/en-us/solution-providers/partnerdetails/technicality-llc_3e9b0d3e-2806-47a1-af36-7869a429e9de/09fd0889-ea78-409b-8828-a0afeefaf885"><img class="img-fluid" src="~/images/mspartnerlogo.png" /></a>
     </div>
 </div>
 <hr />
@@ -27,12 +30,12 @@
         <!-- Begin Mailchimp Signup Form -->
         <link href="//cdn-images.mailchimp.com/embedcode/classic-10_7.css" rel="stylesheet" type="text/css">
         <style type="text/css">
-                 #mc_embed_signup {
-                     background: #fff;
-                     clear: left;
-                     font: 14px Helvetica,Arial,sans-serif;
-                 }
-                 /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
+            #mc_embed_signup {
+                background: #fff;
+                clear: left;
+                font: 14px Helvetica,Arial,sans-serif;
+            }
+            /* Add your own Mailchimp form style overrides in your site stylesheet or in this style block.
             We recommend moving this block and the preceding CSS link to the HEAD of your HTML file. */
         </style>
         <div id="mc_embed_signup">
@@ -57,6 +60,7 @@
         </div>
 
         <!--End mc_embed_signup-->
+
     </div>
 </div>
 <hr />
