Change home heading

--- a/Technicality.online/Views/Home/Index.cshtml
+++ b/Technicality.online/Views/Home/Index.cshtml
@@ -7,7 +7,7 @@
 
 <div class="row">
     <div class="col">
-        <h1>We specialize in IT services for medical billing companies</h1>
+        <h1>Gain Control of your Technology Systems</h1>
         <p>We understand the unique technical challenges that medical billing companies deal with.</p>
         <ul>
             <li>HIPAA has ramifications for almost everything you do.</li>
