First draft of Control

--- a/Technicality.online/Views/Home/Index.cshtml
+++ b/Technicality.online/Views/Home/Index.cshtml
@@ -4,19 +4,50 @@
         <img class="img-fluid" src="~/images/TechnicalityLogo.jpg" />
     </div>
 </div>
+<h1 display-1">
+    Gain and Maintain Control of your Technology Systems
+</h1>
+<p>&nbsp;</p>
 
 <div class="row">
-    <div class="col">
-        <h1>Gain Control of your Technology Systems</h1>
-        <p>We understand the unique technical challenges that medical billing companies deal with.</p>
+    <div class="col-6">
+        <p>Technology has crept into all aspects of our lives and especially our work. More and more people whose background is not in technology are being asked to manage technology systems, staff, and projects.</p>
+        <p>Technology can be a mixed blessing. It can be a powerful tool, but can also be unbelievably frustrating. Being <b>&quot;In Control&quot;</b> of your systems makes all the difference.</p>
+        <p>There are many ways for systems to get <b>&quot;Out of Control&quot;</b></p>
         <ul>
-            <li>HIPAA has ramifications for almost everything you do.</li>
-            <li>You frequently need more secure connections than similarly sized companies in other industries.</li>
-            <li>Your employee's computers need to run PM systems for multiple client practices.</li>
+            <li>You had a vendor or employee who knew how everything worked, but something happened and now they are gone. Now you need to add a new email address (or something like that) and no one knows how.</li>
+            <li>Different people have added different things to the system while you were growing, but things grew too fast. Now no one knows what all the pieces are or how they connect.</li>
+            <li>You thought you knew how a system was supposed to work, but now it is not working as expected and nobody can figure out why.</li>
         </ul>
-        <p>We can help with setup, helpdesk support, secure remote connectivity, Internet hosting, and cloud services like Microsoft 365 and Azure. We've also developed a web application called <a asp-controller="Projects" asp-action="RCMChannels">RCM Channels</a> to help billers track down loose ends on getting claims paid.</p>
+        <blockquote class="blockquote">
+            <p class="mb-0">Entropy: a gradual decline into disorder</p>
+        </blockquote>
+        <p><a href="https://en.wikipedia.org/wiki/Entropy" target="_blank">Entropy</a> is a scientific term to describe the tendency for things to grow more disorganized over time. Entropy is an ever present enemy trying to sneak in cause your systems to get <b>Out of Control</b>.</p>
     </div>
-    <div class="col">
-        <img class="img-fluid" src="~/images/shutterstock_547201843.jpg" />
+    <div class="col-6">
+        <img class="img-fluid" src="~/images/shutterstock_393015229.jpg" alt="Out of Control">
     </div>
+</div>
+
+<div class="row">
+    <div class="col-6">
+        <img class="img-fluid" src="~/images/shutterstock_393071758.jpg" alt="I got this">
+    </div>
+    <div class="col-6">
+        <p>At Technicality, we are here to help you gain and maintain control of your technology systems. Our goal is to help you get to the point where you feel like <b>&quot;I've got this!&quot;</b>.</p>        
+        <h3>Gain Control services</h3>
+        <ul>
+            <li>System reviews</li>
+            <li>System documentation</li>
+            <li>Education</li>
+        </ul>
+        <h3>Maintain Control services</h3>
+        <ul>
+            <li>Best practices in maintenance</li>
+            <li>Helpdesk services</li>
+            <li>Manage vendor relationships</li>
+            <li>Managing software development projects</li>
+        </ul>
+    </div>
+
 </div>
