--- a/Technicality.online/Views/Home/Index.cshtml
+++ b/Technicality.online/Views/Home/Index.cshtml
@@ -4,25 +4,50 @@
         <img class="img-fluid" src="~/images/TechnicalityLogo.jpg" />
     </div>
 </div>
-<h1 display-1">
-    Gain and Maintain Control of your Technology Systems
+<h1 class="text-center">
+    <span class="display-2">Gain and Maintain Control</span> <br /><span class="display-4">of your Technology Systems</span>
 </h1>
-<p>&nbsp;</p>
+<hr />
+<h4>Entropy: a gradual decline into disorder</h4>
+<p><i><b>Entropy</b> is a scientific term to describe the tendency for things to grow more disordered over time. Entropy is an ever present enemy trying to sneak in cause your systems to get <b>Out of Control</b></i>.</p>
+
+<hr />
+<p>
+    Technology has crept into all aspects of our lives and especially our work. More and more <b>people whose background is not in technology are being asked to manage technology systems, staff, and projects</b>.
+    Technology can be a mixed blessing. It can be a powerful tool, but can also be unbelievably frustrating. Being <b>In Control</b> of your systems makes all the difference.
+</p>
 
 <div class="row">
     <div class="col-6">
-        <p>Technology has crept into all aspects of our lives and especially our work. More and more people whose background is not in technology are being asked to manage technology systems, staff, and projects.</p>
-        <p>Technology can be a mixed blessing. It can be a powerful tool, but can also be unbelievably frustrating. Being <b>&quot;In Control&quot;</b> of your systems makes all the difference.</p>
-        <p>There are many ways for systems to get <b>&quot;Out of Control&quot;</b></p>
         <ul>
-            <li>You had a vendor or employee who knew how everything worked, but something happened and now they are gone. Now you need to add a new email address (or something like that) and no one knows how.</li>
-            <li>Different people have added different things to the system while you were growing, but things grew too fast. Now no one knows what all the pieces are or how they connect.</li>
-            <li>You thought you knew how a system was supposed to work, but now it is not working as expected and nobody can figure out why.</li>
+            <li>
+                What if the vendor or employee who managed your organization's <b>network</b> is no longer around:
+                <ul>
+                    <li>&quot;How do we add a new <b>email</b>?&quot;</li>
+                    <li>&quot;The new employee needs permission to the shared folder on the <b>server</b>.&quot;</li>
+                    <li>&quot;Are we backing our files up to <b>the cloud</b>?&quot;</li>
+                    <li>&quot;We need to set up a secure <b>VPN</b> link to another location.&quot;</li>
+                </ul>
+            </li>
+            <li>
+                Maybe you're <b>developing a software application</b> where you are the subject matter expert, but don't know a lot about software development.
+                <ul>
+                    <li>The software developers seem to always be <b>90% done</b>.</li>
+                    <li>Do you have control of your <b>source code</b>?</li>
+                    <li>Do you know if your <b>application hosting</b> is secure?</li>
+                </ul>
+            </li>
+            <li>
+                You need to update your website to generate more leads.
+                <ul>
+                    <li>Where is it <b>hosted</b>?</li>
+                    <li>Who has the GoDaddy <b>credentials</b>?</li>
+                    <li>How can we use <b>SEO</b> to improve our search rankings?</li>
+                    <li>Do we need to buy <b>ads</b> on Google? How does that work?</li>
+                </ul>
+            </li>
         </ul>
-        <blockquote class="blockquote">
-            <p class="mb-0">Entropy: a gradual decline into disorder</p>
-        </blockquote>
-        <p><a href="https://en.wikipedia.org/wiki/Entropy" target="_blank">Entropy</a> is a scientific term to describe the tendency for things to grow more disorganized over time. Entropy is an ever present enemy trying to sneak in cause your systems to get <b>Out of Control</b>.</p>
+        <p>There are all examples of technology systems that sound like they are getting <b>Out of Control</b>.</p>
     </div>
     <div class="col-6">
         <img class="img-fluid" src="~/images/shutterstock_393015229.jpg" alt="Out of Control">
@@ -34,20 +59,12 @@
         <img class="img-fluid" src="~/images/shutterstock_393071758.jpg" alt="I got this">
     </div>
     <div class="col-6">
-        <p>At Technicality, we are here to help you gain and maintain control of your technology systems. Our goal is to help you get to the point where you feel like <b>&quot;I've got this!&quot;</b>.</p>        
-        <h3>Gain Control services</h3>
-        <ul>
-            <li>System reviews</li>
-            <li>System documentation</li>
-            <li>Education</li>
-        </ul>
-        <h3>Maintain Control services</h3>
-        <ul>
-            <li>Best practices in maintenance</li>
-            <li>Helpdesk services</li>
-            <li>Manage vendor relationships</li>
-            <li>Managing software development projects</li>
-        </ul>
+
+        <p>At Technicality, we are here to help you gain and maintain control of your technology systems. Our goal is to help you get to the point where you feel like <b>&quot;I've got this!&quot;</b>.</p>
+        <p>First we can help you <b>Gain Control</b> by reviewing your systems and providing some documentation and helping you understand what you have. (This probably won't take as long as you might think.)</p>
+        <p>Then we can help you <b>Maintain Control</b> by helping you implement best practices with day to day IT management, software development, project management, and vendor relationships.</p>
+        <p>If you're not already taking advantage of <b>cloud computing</b>, we can help you take advantage of that as well. Almost every organization can benefit by saving money and increasing reliability by taking advantage of cloud technology.</p>
+
     </div>
 
 </div>
