--- a/Technicality.online/Views/Home/Cloud.cshtml
+++ b/Technicality.online/Views/Home/Cloud.cshtml
@@ -3,7 +3,8 @@
     ViewData["Title"] = "CloudComputing";
 }
 
-<h1>Microsoft Azure</h1>
+<h1>Cloud Computing</h1>
+<h2>Microsoft Azure</h2>
 
 <p><a href="https://azure.microsoft.com/en-us/" target="_blank">Azure</a> is Microsoft&#39;s cloud computing environment. Some frequently used features of Azure are:</p>
 <ul>
@@ -19,7 +20,9 @@
         <br />
         <a href="https://news.microsoft.com/innovation-stories/microsofts-virtual-datacenter-grounds-the-cloud-in-reality/" target="_blank">Read more about it here.</a>
     </p>
-
+<hr />
+<h2>Amazon Web Services</h2>
+<p>We also manage some client applications on <a href="https://aws.amazon.com/" target="_blank">AWS</a> and are comfortable with the environment, but we do a lot more work with Azure.</p>
 <hr />
 <p>Here is a short video from Microsoft outlining <i>4 Reasons SMBs Should Move to Microsoft Azure</i> </p>
 <video width="500" height="281" controls poster="https://technicalitystorage.blob.core.windows.net/public/4 Reasons to move to Azure image.jpg">
