--- a/Technicality.online/Views/Home/ITServices.cshtml
+++ b/Technicality.online/Views/Home/ITServices.cshtml
@@ -3,10 +3,10 @@
     ViewData["Title"] = "ITServices";
 }
 
-<h1>IT Services</h1>
+<h1>Network/Support Services</h1>
 
 
-<p>Technicality can help you can manage your network and information technology environment for you so that everything just works.</p>
+<p>Here are some of the things we are currently helping clients with related to their IT/network infrastructure.</p>
 <div class="row align-items-center">
     <div class="col">
         <img class="img-fluid" src="~/images/shutterstock_54179128.jpg" />
@@ -14,7 +14,7 @@
     <div class="col">
         <div class="h4">IT management related services:</div>
         <ul>
-            <li>Microsoft 365 management (formerly Office 365)</li>
+            <li><a href="https://www.microsoft.com/en-us/microsoft-365/business" target="_blank">Microsoft 365</a> management, including license management. <i>We have a little experience with <a href="https://workspace.google.com/" target="_blank">Google Workspace</a> (formerly G-Suite), but work a lot more with the Microsoft products.</i></li>
             <li>File and print servers</li>
             <li>Networking and Internet service</li>
             <li>Helpdesk</li>
