--- a/Technicality.online/Views/Home/OurApproach.cshtml
+++ b/Technicality.online/Views/Home/OurApproach.cshtml
@@ -13,11 +13,11 @@
     <div class="h2">Cooks and Waiters - which one would you rather interact with?</div>
 </div>
 <div class="row">
-    <div class="col">He makes delicious food (or writes good code or knows how to optimize your network traffic). Absolutely critical to the operation, but you don't really want to interact directly with him</div>
+    <div class="col">He makes delicious food (or writes good code or knows how to optimize your network traffic). Absolutely critical to the operation, but you don't really want to interact directly with him.<br /> <b>It all boils down to communication.</b><br />As you've no doubt experienced, many people who are great with technology are more comfortable with computers than with people.</div>
     <div class="col">
         <img class="img-fluid" src="~/images/shutterstock_144185458.jpg" />
     </div>
-    <div class="col">She is a great communicator who can translate your wishes to the "cooks". Clearly answers your questions, makes good recommendations based on your input, sets realistic expectations, and keeps you up-to-date on progress.</div>
+    <div class="col">She is a great communicator who can translate your wishes to the "cooks". Clearly answers your questions, makes good recommendations based on your input, sets realistic expectations, and keeps you up-to-date on progress.<br /><b>We pride ourselves on being able to communicate well.</b></div>
     <div class="col">
         <img class="img-fluid" src="~/images/waiter.jpg" />
     </div>
