--- a/Technicality.online/Views/Home/SoftwareDevelopment.cshtml
+++ b/Technicality.online/Views/Home/SoftwareDevelopment.cshtml
@@ -1,9 +1,9 @@
 ﻿
 @{
-    ViewData["Title"] = "ITServices";
+    ViewData["Title"] = "Web/Software Development";
 }
 
-<h1>Software Development</h1>
+<h1>Web/Software Development</h1>
 <p>Technicality can help you with any software development needs you have. Whether you need something simple, like importing and exporting data from different applications, or you need a full-blown applications, we can help you through this process.</p>
 <div class="row align-items-center">
     <div class="col">
