--- a/Technicality.online/Views/Shared/_Layout.cshtml
+++ b/Technicality.online/Views/Shared/_Layout.cshtml
@@ -48,13 +48,13 @@
                         </li>
 
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ITServices">IT Services</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="ITServices">Network/Support Services</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Azure">Microsoft Azure</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SoftwareDevelopment">Web/Software Development</a>
                         </li>
                         <li class="nav-item">
-                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="SoftwareDevelopment">Software Development</a>
+                            <a class="nav-link text-dark" asp-area="" asp-controller="Home" asp-action="Cloud">Cloud Computing</a>
                         </li>
 
                         @*<li class="nav-item dropdown">
