--- a/Technicality.online/Views/Home/About.cshtml
+++ b/Technicality.online/Views/Home/About.cshtml
@@ -6,8 +6,9 @@
 <div class="row align-items-center">
     <div class="col-8">
         <blockquote class="blockquote">
-            <p>Technicality is a technology consulting firm located in the Birmingham, AL area.</p>
+            <p>JeffTrotman.com showcases the consulting services of Technicality LLC.</p>
         </blockquote>
+        <p>Technicality is based in the Birmingham, AL area.</p>
     </div>
     <div class="col-2">
         <a href="https://linkedin.com/company/technicality"><img class="img-fluid" src="~/images/LI-Logo.png" /></a>
@@ -21,8 +22,7 @@
     <div class="col-6">
         <div class="text-center">
             <figure class="figure">
-                <img class="img-fluid" src="~/images/shutterstock_101403709.jpg" />
-                <figcaption class="figure-caption">View of downtown from <a href="https://railroadpark.org" target="_blank">Railroad Park</a>, a catalyst for Birmingham's rejuvenation</figcaption>
+                <img class="img-fluid" src="~/images/shutterstock_622863563.jpg" />
             </figure>
         </div>
     </div>
@@ -68,7 +68,7 @@
 <div class="row">
     <div class="col-10">
         <div class="justify-content-center">
-            <div>Technicality is led by <a href="https://www.linkedin.com/in/jefftrotman10/" target="_blank">Jeff Trotman</a>. Jeff has been in the technology business in Birmingham for over 25 years and has spent the last several years focused on healthcare technology working with medical practices, imaging centers, hospitals, and medical billing firms.</div>
+            <div><a href="https://www.linkedin.com/in/jefftrotman10/" target="_blank">Jeff Trotman</a> has been in the technology business for over 25 years. He has experience with software development, network administration, IT management, and cloud computing. He currently manages the several Software as a Service applications.</div>
         </div>
     </div>
     <div class="col-2">
