--- a/Technicality.online/Views/Home/Index.cshtml
+++ b/Technicality.online/Views/Home/Index.cshtml
@@ -1,15 +1,14 @@
 ﻿
 <div class="row justify-content-center">
-    <div class="col">
-        <img class="img-fluid" src="~/images/TechnicalityLogo.jpg" />
+    <div class="col-1">
+        <img class="img-fluid" src="~/images/TechnicalityIcon.png"  />
+    </div>
+    <div class="col-11">
+        <h1 class="text-center">
+            <span class="display-2">Gain and Maintain Control</span> <br /><span class="display-4">of your Technology Systems</span>
+        </h1>
     </div>
 </div>
-<h1 class="text-center">
-    <span class="display-2">Gain and Maintain Control</span> <br /><span class="display-4">of your Technology Systems</span>
-</h1>
-<hr />
-<h4>Entropy: a gradual decline into disorder</h4>
-<p><i><b>Entropy</b> is a scientific term to describe the tendency for things to grow more disordered over time. Entropy is an ever present enemy trying to sneak in cause your systems to get <b>Out of Control</b></i>.</p>
 
 <hr />
 <p>
@@ -60,7 +59,7 @@
     </div>
     <div class="col-6">
 
-        <p>At Technicality, we are here to help you gain and maintain control of your technology systems. Our goal is to help you get to the point where you feel like <b>&quot;I've got this!&quot;</b>.</p>
+        <p>We are here to help you gain and maintain control of your technology systems. Our goal is to help you get to the point where you feel like <b>&quot;I've got this!&quot;</b>.</p>
         <p>First we can help you <b>Gain Control</b> by reviewing your systems and providing some documentation and helping you understand what you have. (This probably won't take as long as you might think.)</p>
         <p>Then we can help you <b>Maintain Control</b> by helping you implement best practices with day to day IT management, software development, project management, and vendor relationships.</p>
         <p>If you're not already taking advantage of <b>cloud computing</b>, we can help you take advantage of that as well. Almost every organization can benefit by saving money and increasing reliability by taking advantage of cloud technology.</p>
