--- a/Technicality.online/Views/Home/OurApproach.cshtml
+++ b/Technicality.online/Views/Home/OurApproach.cshtml
@@ -24,7 +24,7 @@
 </div>
 <hr />
 <div class="row">
-    <div class="h3">At Technicality, we understand that it takes both to ensure a great experience for you.</div>
+    <div class="h3">We understand that it takes both to ensure a great experience for you.</div>
 </div>
 
 
