--- a/Technicality.online/Views/Home/SoftwareDevelopment.cshtml
+++ b/Technicality.online/Views/Home/SoftwareDevelopment.cshtml
@@ -4,7 +4,7 @@
 }
 
 <h1>Web/Software Development</h1>
-<p>Technicality can help you with any software development needs you have. Whether you need something simple, like importing and exporting data from different applications, or you need a full-blown applications, we can help you through this process.</p>
+<p>We can help you with any software development needs you have. Whether you need something simple, like importing and exporting data from different applications, or you need a full-blown applications, we can help you through this process.</p>
 <div class="row align-items-center">
     <div class="col">
         <img class="img-fluid" src="~/images/shutterstock_432008923.jpg" />
