--- a/Technicality.online/Views/Home/About.cshtml
+++ b/Technicality.online/Views/Home/About.cshtml
@@ -68,7 +68,7 @@
 <div class="row">
     <div class="col-10">
         <div class="justify-content-center">
-            <div><a href="https://www.linkedin.com/in/jefftrotman10/" target="_blank">Jeff Trotman</a> has been in the technology business for over 25 years. He has experience with software development, network administration, IT management, and cloud computing. He currently manages the several Software as a Service applications.</div>
+            <div><a href="https://www.linkedin.com/in/jefftrotman10/" target="_blank">Jeff Trotman</a> has been in the technology business for over 25 years. He has experience with software development, network administration, IT management, and cloud computing. He currently manages several Software as a Service applications.</div>
         </div>
     </div>
     <div class="col-2">
