--- a/Technicality.online/Views/Home/Index.cshtml
+++ b/Technicality.online/Views/Home/Index.cshtml
@@ -1,7 +1,10 @@
-﻿
+﻿@{
+    ViewData["Title"] = "Home";
+}
+
 <div class="row justify-content-center">
     <div class="col-1">
-        <img class="img-fluid" src="~/images/TechnicalityIcon.png"  />
+        <img class="img-fluid" src="~/images/TechnicalityIcon.png" />
     </div>
     <div class="col-11">
         <h1 class="text-center">
