--- a/Technicality.online/Views/Home/OurApproach.cshtml
+++ b/Technicality.online/Views/Home/OurApproach.cshtml
@@ -1,5 +1,5 @@
 ﻿@{
-    ViewData["Title"] = "Home Page";
+    ViewData["Title"] = "Approach";
 }
 
 <div class="text-center">
@@ -24,7 +24,7 @@
 </div>
 <hr />
 <div class="row">
-    <div class="h3">We understand that it takes both to ensure a great experience for you.</div>
+    <div class="h3 text-center">We understand that it takes both to ensure a great experience for you.</div>
 </div>
 
 
