Back to Technicality

--- a/Technicality.online/Views/Home/About.cshtml
+++ b/Technicality.online/Views/Home/About.cshtml
@@ -5,10 +5,11 @@
 
 <div class="row align-items-center">
     <div class="col-8">
+        <img class="img-fluid" src="~/images/TechnicalityLogo.jpg" alt="Technicality"/>
         <blockquote class="blockquote">
-            <p>JeffTrotman.com showcases the consulting services of Technicality LLC.</p>
+            <p>Technicality LLC is a technology consulting firm in the Birmingham, AL area.</p>
         </blockquote>
-        <p>Technicality is based in the Birmingham, AL area.</p>
+        <p><a href="https://blog.technicality.online">Read about some of the projects we are working on</a></p>
     </div>
     <div class="col-2">
         <a href="https://linkedin.com/company/technicality"><img class="img-fluid" src="~/images/LI-Logo.png" /></a>
@@ -68,7 +69,7 @@
 <div class="row">
     <div class="col-10">
         <div class="justify-content-center">
-            <div><a href="https://www.linkedin.com/in/jefftrotman10/" target="_blank">Jeff Trotman</a> has been in the technology business for over 25 years. He has experience with software development, network administration, IT management, and cloud computing. He currently manages several Software as a Service applications.</div>
+            <div><a href="https://www.linkedin.com/in/jefftrotman10/" target="_blank">Jeff Trotman</a> has been in the technology business for over 25 years. He has experience with software development, network administration, IT management, and cloud computing. In addition to serving as Technicality's lead consultant, he also currently manages several Software as a Service applications.</div>
         </div>
     </div>
     <div class="col-2">
