--- a/Technicality.online/Views/Home/OurApproach.cshtml
+++ b/Technicality.online/Views/Home/OurApproach.cshtml
@@ -23,7 +23,7 @@
     </div>
 </div>
 <hr />
-<div class="row">
+<div class="row text-center">
     <div class="h3 text-center">We understand that it takes both to ensure a great experience for you.</div>
 </div>
 
